fixed navbar responsiveness via CSS grid to collapse into two columns. Created footer with copyright information and linux foundation logo. Fixed padding with links underneath buttons.

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,13 @@ h2 {
 .navlink {
   padding-right: 10px;
   padding-left: 10px;
-  font-size: 15px;
+  font-size: 20px;
+}
+
+.copyright {
+  color: white;
+  padding: 10px;
+  font-size: .25em;
 }
 
 .sublink {
@@ -23,6 +29,7 @@ h2 {
 }
 
 .btn-xl {
+    margin: auto;
     padding: 10px 10px;
     font-size: 150%;
     border-radius: 0px;
@@ -34,14 +41,28 @@ h2 {
     padding-right: 50px;
 }
 
-@media screen and (max-width: 750px) {
-  body {
-    background-color: black;
-  }
-  p {
-    color: white;
-  }
-  h2 {
-    color: grey;
-  }
+.greenButton {
+  margin: auto;
+}
+
+.footerImg {
+  padding-top: 1em;
+}
+
+.footlinks {
+  text-align: right;
+}
+
+@media screen and (max-width: 500px) {
+    .nav {
+      display: grid;
+      grid-template-columns: 50% 50%;
+    }
+    #lfcp {
+      width: 100%;
+    }
+}
+
+@media screen and (min-width: 850px) {
+
 }
